configuration for bundle ok

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
             "name": "Loïc Bourg",
             "email": "lbourg@itnetwork.fr"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": { "ITN\\DebugBundle\\": "" }
+    }
 }
